# expense-tracker-cli

./: .gitignore  README.md  pyproject.toml
expense_tracker/domain/: expense.py
tests/: test_expense.py
